fixed z-index issue on hamburger menu

--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -5,7 +5,7 @@
     margin: 0px;
     padding: 0px;
     position: fixed;
-    z-index: 1;
+    z-index: 80;
     top: 0;
 }
 
@@ -99,6 +99,7 @@
     color: white;
     top: 1rem;
     right: 1rem;
+    z-index: 100;
 }
 
 @media screen and (max-width: 500px) {
