--- a/Sass/main.css
+++ b/Sass/main.css
@@ -8,7 +8,7 @@
   margin: 0px;
   padding: 0px;
   position: fixed;
-  z-index: 1;
+  z-index: 80;
   top: 0;
 }
 
@@ -98,6 +98,7 @@
   color: white;
   top: 1rem;
   right: 1rem;
+  z-index: 100;
 }
 
 @media screen and (max-width: 500px) {
@@ -375,6 +376,7 @@
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 1;
 }
 .ProjectOverlay:target {
   visibility: visible;
